--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -45,7 +45,7 @@
                             </span>
                                 <div class="chat-body clearfix">
                                     <div class="header">
-                                        <strong class="primary-font">{{message.user}}</strong> <a href="#">supprimer message</a> <small class="pull-right text-muted">
+                                        <strong class="primary-font">{{message.user}}</strong> <a href="/chat/deleteMessage?msgID={{message.id}}">supprimer message</a> <small class="pull-right text-muted">
                                             <span class="glyphicon glyphicon-time"></span>{{message.pub_date}}</small>
                                     </div>
                                     <p class="pull-right">
